--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
                   <li>Benefits</li>
                   <li>FAQ Page</li>
                   <li>Contact</li>
-                  <li>Sign In</li>
+                  <li>Sign In <i class="fa-solid fa-circle-user fa-xl"></i></li>
                 </ul>
             </bento-sidebar>
             <!--SIDEBAR CONTROL-->
-            <div class="buttons" style="margin-top: 8px">
+            <div class="buttons" style="margin: 8px">
                 <button id="open-sidebar" aria-label="menu"> <i class="fa-solid fa-bars fa-2x"></i></button>
             </div>
             <!--END OF BENTO SIDEBAR-->
@@ -56,7 +56,7 @@
                         <li><a href="#Benefits">Benefits</a></li>
                         <li><a href="faq.html">FAQ Page</a></li>
                         <li><a href="contact.html">Contact</a></li>
-                        <li><a href="signin.html">Sign In</a></li>
+                        <li><a href="signin.html">Sign In <i class="fa-solid fa-circle-user fa-xl"></i></a></a></li>
                     </ul>
                 </nav>
                 <!--END OF DESKTOP NAV-->   
