--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div class="container">
                 <article class="about-article">
                     <h1>Credit Card Provider</h1>
-                    <p>We are one of the fastest growing credit card companies, in America.</p>
+                    <p class="intro">We are one of the fastest growing credit card companies, in America.</p>
                     <p class="about-p"><a href="#" class="btn-primary">faq questions <i class="fa-solid fa-angle-right"></i></a></p>
                 </article>
             </div>
@@ -110,6 +110,60 @@
             </div>
         </section>
         <!--END OF BENEFITS SECTION-->
+        <section id="credit_cards">
+            <h2>Credit Cards</h2>
+            <div class="container">
+                <figure class="creditcard">
+                    <article>
+                        <picture class="image">
+                            <source srcset="./imgs/pexels-karolina-grabowska-4386476.avif" type="image/avif">
+                            <img src="./imgs/pexels-karolina-grabowska-4386476 (1).jpg" width="640" height="960" loading="lazy" alt="money">
+                        </picture>
+                        <h3>Platinum Card</h3>
+                        <p>This credit card is for well established clients, with an excellent credit score and payment history.</p>
+                        <figcaption><a href="#" class="btn">apply now <i class="fa-solid fa-angle-right"></i></a></figcaption>
+                    </article>
+                </figure>
+                <!--END OF FIRST CREDIT CARD-->
+                <figure class="creditcard">
+                    <article>
+                        <picture class="image">
+                            <source srcset="./imgs/pexels-skitterphoto-332304.avif" type="image/avif">
+                            <img src="./imgs/pexels-skitterphoto-332304 (1).jpg" width="640" height="427" loading="lazy" alt="coins">
+                        </picture>
+                        <h3>Cash Card</h3>
+                        <p>Every penny counts and with this card, each eligible purchase receives 5% cash back.</p>
+                        <figcaption><a href="#" class="btn">apply now <i class="fa-solid fa-angle-right"></i></a></figcaption>
+                    </article>
+                </figure>
+                <!--END OF SECOND CREDIT CARD-->
+                <figure class="creditcard">
+                    <article>
+                        <picture class="image">
+                            <source srcset="./imgs/pexels-rodnae-productions-7821679.avif" type="image/avif">
+                            <img src="./imgs/pexels-rodnae-productions-7821679 (1).jpg" width="640" height="427" loading="lazy" alt="credit card">
+                        </picture>
+                        <h3>Personal Card</h3>
+                        <p>This is a credit card, that is open to students and anyone who wants to establish credit.</p>
+                        <figcaption><a href="#" class="btn">apply now <i class="fa-solid fa-angle-right"></i></a></figcaption>  
+                    </article>
+                </figure>
+                <!--END OF THIRD CREDIT CARD-->
+                <figure class="creditcard">
+                    <article>
+                        <picture class="image">
+                            <source srcset="./imgs/pexels-rodnae-productions-7821685.avif" type="image/avif">
+                            <img src="./imgs/pexels-rodnae-productions-7821685 (1).jpg" width="640" height="427" loading="lazy" alt="paperwork">
+                        </picture>
+                        <h3>Business Card</h3>
+                        <p>This credit card is meant for businesses, both small and large. Excellent rates are available.</p>
+                        <figcaption><a href="#" class="btn">apply now <i class="fa-solid fa-angle-right"></i></a></figcaption> 
+                    </article>
+                    <!--END OF FINAL CREDIT CARD-->
+                </figure>
+            </div>
+        </section>
+        <!--END OF CREDIT CARDS SECTION-->
 
         <script>
             (async () => {
