--- a/index.html
+++ b/index.html
@@ -164,6 +164,73 @@
             </div>
         </section>
         <!--END OF CREDIT CARDS SECTION-->
+        <footer id="footer" aria-label="footer">
+            <section id="footer-main">
+                <article class="footer-column">
+                    <h3 class="footer-title">Photo Credit</h3>
+                    <ul>
+                        <li><a href="https://www.pexels.com/photo/black-smartphone-on-green-table-6214382/">Nataliya Vaitkevich</a></li>
+                        <li><a href="https://www.pexels.com/photo/roll-of-american-dollar-banknotes-tightened-with-band-4386476/">Karolina Grabowska</a></li>
+                        <li><a href="https://www.pexels.com/photo/close-up-of-coins-on-table-332304/">Skitterphoto</a></li>
+                        <li><a href="https://www.pexels.com/photo/green-card-beside-a-document-7821679/">RODNAE Productions</a></li>
+                        <li><a href="https://www.pexels.com/photo/gray-calculator-and-black-magnifying-glass-on-brown-wooden-surface-7821685/">RODNAE Productions</a></li>
+                    </ul>
+                </article>
+                <article class="footer-column">
+                    <h3 class="footer-title">Permalinks</h3>
+                    <ul>
+                       <li><a href="#about">About</a></li>
+                       <li><a href="#benefits">Benefits</a></li>
+                       <li><a href="#credit_cards">Credit Cards</a></li>
+                       <li><a href="faq.html">FAQ page</a></li>
+                       <li><a href="contact.html">Contact</a></li>
+                       <li><a href="signin.html">Sign In <i class="fa-solid fa-circle-user fa-xl"></i></a></a></li>
+                    </ul>
+                </article>
+                <article class="footer-column">
+                    <h3 class="footer-title">Company</h3>
+                    <ul>
+                        <li><a href="#">Careers</a></li>
+                        <li><a href="#">Investors</a></li>
+                        <li><a href="#">Help Desk</a></li>
+                    </ul>
+                </article>
+                <article class="footer-column">
+                    <h3 class="footer-title">Stay Informed</h3>
+                    <p>Subscribe to our mailing list.</p>
+                    <form action="newsletter" aria-label="signup">
+                        <label for="email" class="label"><input id="email" type="email" name="email" placeholder="Enter your email"
+                        required="valid email" aria-label="enter your email"></label>
+                        <label for="submit button"><input type="submit" value="Subscribe"></label>
+                    </form>
+                </article>
+            </section>
+            <!--END OF FOOTER MAIN SECTION-->
+            <section id="footer-socials" aria-label="social media">
+                <ul class="footer-icons">
+                    <li><a href="#" aria-label="facebook"><i class="fa-brands fa-facebook fa-lg"></i></a></li>
+                    <li><a href="#" aria-label="twitter"><i class="fa-brands fa-twitter fa-lg"></i></a></li>
+                    <li><a href="#" aria-label="instagram"><i class="fa-brands fa-instagram fa-lg"></i></a></li>
+                    <li><a href="#" aria-label="github"><i class="fa-brands fa-github fa-lg"></i></a></li>
+                    <li><a href="#" aria-label="linkedin"><i class="fa-brands fa-linkedin fa-lg"></i></a></li>
+                    <li><a href="#" aria-label="youtube"><i class="fa-brands fa-youtube fa-lg"></i></a></li>
+                </ul>
+            </section>
+            <!--END OF SOCIAL MEDIA SECTION-->
+            <section id="footer-legal" aria-label="legal">
+                <small>
+                    <ul class="footer-legal-items">
+                       <li><a href="#">Terms &amp; Conditions</a></li>
+                       <li><a href="#">Privacy Policy</a></li>
+                       <li>&copy; Copyright 2022 Logo</li>
+                    </ul>
+                </small>
+            </section>
+            <!--END OF LEGAL SECTION-->
+        </footer> 
+        <!--END OF FOOTER SECTION-->   
+            </section>
+        </footer>
 
         <script>
             (async () => {
