--- a/apply.html
+++ b/apply.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Frequently Asked Questions</title>
+    <title>Application Form</title>
 
     <!--SEO-->
-    <meta name="title" content="Frequently Asked Questions">
-    <meta name="description" content="This is a faq page, for a fictional company">
+    <meta name="title" content="Application Form">
+    <meta name="description" content="This is an application page, for a fictional company">
 
     <!--CUSTOM CSS-->
     <link rel="stylesheet" href="styles.css">
