--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
                   <li><a href="index.html#about">About</a></li>
                   <li><a href="index.html#benefits">Benefits</a></li>
                   <li><a href="index.html#credit_cards">Credit Cards</a></li>
-                  <li><a href="faq.html">FAQ page</a></li>
+                  <li><a href="apply.html">Apply Now</a></li>
                   <li><a href="contact.html">Contact</a></li>
                   <li><a href="signin.html">Sign In <i class="fa-solid fa-circle-user fa-xl"></i></a></li>
                 </ul>
@@ -54,7 +54,7 @@
                         <li><a href="index.html#about">About</a></li>
                         <li><a href="index.html#benefits">Benefits</a></li>
                         <li><a href="index.html#credit_cards">Credit Cards</a></li>
-                        <li><a href="faq.html">FAQ Page</a></li>
+                        <li><a href="apply.html">Apply Now</a></li>
                         <li><a href="contact.htm">Contact</a></li>
                         <li><a href="signin.html">Sign In <i class="fa-solid fa-circle-user fa-xl"></i></a></a></li>
                     </ul>
@@ -134,7 +134,7 @@
                        <li><a href="index.html#about">About</a></li>
                        <li><a href="index.html#benefits">Benefits</a></li>
                        <li><a href="index.html#credit_cards">Credit Cards</a></li>
-                       <li><a href="faq.html">FAQ page</a></li>
+                       <li><a href="apply.html">Apply Now</a></li>
                        <li><a href="contact.html">Contact</a></li>
                        <li><a href="signin.html">Sign In <i class="fa-solid fa-circle-user fa-xl"></i></a></a></li>
                     </ul>
@@ -151,9 +151,9 @@
                     <h3 class="footer-title">Stay Informed</h3>
                     <p>Subscribe to our mailing list.</p>
                     <form action="newsletter" aria-label="signup">
-                        <label for="email" class="label"><input id="email" type="email" name="email" placeholder="Enter your email"
-                        required="valid email" aria-label="enter your email"></label>
-                        <label for="submit button"><input type="submit" value="Subscribe"></label>
+                        <label for="signup-email" class="label"><input id="signup-email" type="email" placeholder="Enter your email"
+                        required="valid email" aria-label="placeholder text"></label>
+                        <label for="submit-label"><input type="submit" value="Subscribe" aria-label="submit button"></label>
                     </form>
                 </article>
             </section>
