--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <li><a href="#about">About</a></li>
                         <li><a href="#benefits">Benefits</a></li>
                         <li><a href="#credit_cards">Credit Cards</a></li>
-                        <li><a href="faq.html">FAQ Page</a></li>
+                        <li><a href="apply.html">Apply Now</a></li>
                         <li><a href="contact.htm">Contact</a></li>
                         <li><a href="signin.html">Sign In <i class="fa-solid fa-circle-user fa-xl"></i></a></a></li>
                     </ul>
@@ -69,7 +69,7 @@
                 <article class="about-article">
                     <h1>Credit Card Provider</h1>
                     <p class="intro">We are one of the fastest growing credit card companies, in America.</p>
-                    <p class="about-p"><a href="#" class="btn-primary">faq questions <i class="fa-solid fa-angle-right"></i></a></p>
+                    <p class="about-p"><a href="apply.html" class="btn-primary">apply now <i class="fa-solid fa-angle-right"></i></a></p>
                 </article>
             </div>
         </section>
@@ -133,7 +133,7 @@
                         </picture>
                         <h3>Cash Card</h3>
                         <p>Every penny counts and with this card, each eligible purchase receives 5% cash back.</p>
-                        <figcaption><a href="#" class="btn">apply now <i class="fa-solid fa-angle-right"></i></a></figcaption>
+                        <figcaption><a href="apply.html" class="btn">apply now <i class="fa-solid fa-angle-right"></i></a></figcaption>
                     </article>
                 </figure>
                 <!--END OF SECOND CREDIT CARD-->
@@ -145,7 +145,8 @@
                         </picture>
                         <h3>Personal Card</h3>
                         <p>This is a credit card, that is open to students and anyone who wants to establish credit.</p>
-                        <figcaption><a href="#" class="btn">apply now <i class="fa-solid fa-angle-right"></i></a></figcaption>  
+                        <figcaption><a href="apply.html" class="btn">apply now <i class="fa-solid fa-angle-right"></i></a></figcaption> 
+                        
                     </article>
                 </figure>
                 <!--END OF THIRD CREDIT CARD-->
@@ -157,7 +158,7 @@
                         </picture>
                         <h3>Business Card</h3>
                         <p>This credit card is meant for businesses, both small and large. Excellent rates are available.</p>
-                        <figcaption><a href="#" class="btn">apply now <i class="fa-solid fa-angle-right"></i></a></figcaption> 
+                        <figcaption><a href="apply.html" class="btn">apply now <i class="fa-solid fa-angle-right"></i></a></figcaption> 
                     </article>
                     <!--END OF FINAL CREDIT CARD-->
                 </figure>
@@ -182,7 +183,7 @@
                        <li><a href="#about">About</a></li>
                        <li><a href="#benefits">Benefits</a></li>
                        <li><a href="#credit_cards">Credit Cards</a></li>
-                       <li><a href="faq.html">FAQ page</a></li>
+                       <li><a href="apply.html">Apply Now</a></li>
                        <li><a href="contact.html">Contact</a></li>
                        <li><a href="signin.html">Sign In <i class="fa-solid fa-circle-user fa-xl"></i></a></a></li>
                     </ul>
