--- a/apply.html
+++ b/apply.html
@@ -64,6 +64,44 @@
             <!--END OF HEADER-->
         </nav>
         <!--END OF MOBILE NAV-->
+        <section class="application">
+            <h2>Application Form</h2>
+            <form action="application form" method="post">
+                <fieldset>
+                    <legend>Please fill out this form with the required information</legend>
+                    <label for="first-name">Enter Your First Name: <input id="first-name" name="first-name" type="text" required></label>
+                    <label for="last-name">Enter Your Last Name: <input id="last-name" name="last-name" type="text" required></label>
+                    <label for="email">Enter Your Email: <input id="personal-email" name="email" type="email" required></label>
+                    <label for="age">Enter Your Age (years): <input id="age" type="number" name="age" min="18" max="100"></label>
+                    <label for="dob">Enter Your Date Of Birth: <input id="dob" type="date" name="dob"></label>
+                    <label for="phone">Enter Your Phone Number: <input id="phone" type="tel" name="phone"></label>
+                    <label for="address">Enter Your Home Address <input type="text" name="address" id="address"></label>
+                    <label for="income-label" aria-label="income">Source Of Income 
+                        <select class="drop_down_menu">
+                            <option value="">(select one)</option>
+                            <option value="1">Employed</option>
+                            <option value="2">Retired</option>
+                            <option value="3">Self-Employed</option>
+                            <option value="4">Unemployed</option>
+                            <option value="5">Military</option>
+                        </select>
+                    </label>
+                </fieldset>
+                <fieldset>
+                    <legend>
+                        <label for="platinum-card"><input id="platinum-card" type="radio" name="card-type" class="inline"> Platinum Card</label>
+                        <label for="cash-card"><input id="cash-card" type="radio" name="card-type" class="inline"> Cash Card</label>
+                        <label for="personal-card"><input id="personal-card" type="radio" name="card-type" class="inline"> Personal Card</label>
+                        <label for="business-card"><input id="business-card" type="radio" name="card-type" class="inline"> Business Card</label>
+                        <label for="terms-and-conditions" name="terms-and-conditions">
+                            <input id="terms-and-conditions" type="checkbox" required name="terms-and-conditions" class="inline"> I accept the <a href="#">terms and conditions</a>
+                        </label>
+                    </legend>
+                </fieldset>
+                <label for="submit-label" class="label5"><input type="submit" value="submit"></label>
+            </form>
+        </section>
+        <!--END OF APPLICATION FORM-->
         <footer id="footer" aria-label="footer">
             <section id="footer-main">
                 <article class="footer-column">
@@ -99,7 +137,7 @@
                     <h3 class="footer-title">Stay Informed</h3>
                     <p>Subscribe to our mailing list.</p>
                     <form action="newsletter" aria-label="signup">
-                        <label for="email" class="label"><input id="email" type="email" name="email" placeholder="Enter your email"
+                        <label for="email" class="label"><input id=" current email" type="email" name="email" placeholder="Enter Email"
                         required="valid email" aria-label="enter your email"></label>
                         <label for="submit button"><input type="submit" value="Subscribe"></label>
                     </form>
