edit: apply.html

--- a/apply.html
+++ b/apply.html
@@ -25,7 +25,7 @@
 </head>
 <!--END OF HEAD-->
 
-<body>
+<body class="application-body">
     <main id="main">
         <nav id="mobile-nav" aria-label="mobile navigation">
             <bento-sidebar id="sidebar1" side="right" hidden>
